--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
 				<span style="color: #285193;">$</span> 10137.2 &nbsp;&nbsp;&nbsp; <span style="color: #285193;">P</span> 138.26 &nbsp;&nbsp;&nbsp; <span style="color: #285193;">E</span> 10988.72
 			</td>
 			<td width="60">
-				<img src="mdi_magnify.svg">	
+				<img src="qism/mdi_magnify.svg">	
 			</td>
 
 			<td >
 				<form>
-					<img width="22px" src="cif_ru.png">
+					<img width="22px" src="qism/cif_ru.png">
 					<select style="border: 0; width: 50px; font-size: 15px;">
 						<option value="eng">ENG</option>
 						<option value="ru" selected>РУ</option>
@@ -64,7 +64,7 @@
 
 		<tr>
 			<td colspan="4">
-				<img width="100%" src="nrg-banner.jpg">
+				<img width="100%" src="qism/nrg-banner.jpg">
 			</td>
 		</tr>
 
@@ -77,7 +77,7 @@
 	<table  width="1200px" style="height: 400px; background-color: white;" align="center" cellspacing="0">
 		<tr valign="top">
 			<td width="400px" align="left" >
-				<img  style="width: 386px; height: 190px;" src="prezident.png">
+				<img  style="width: 386px; height: 190px;" src="qism/prezident.png">
 				<p style="font-size: 17px; font-weight: bolder">
 					Мирзиёев рассказал, зачем было построено 
 					Сардобинское водохранилище
@@ -85,7 +85,7 @@
 			</td>
 			
 			<td width="400px" align="center"> 
-				<img style="width: 386px; height: 190px;" src="karantin.jpg">
+				<img style="width: 386px; height: 190px;" src="qism/karantin.jpg">
 				<p align="left" style="font-size: 17px; font-weight: bolder">
 					&nbsp;Карантин в Узбекистане продлен до 1 июня <br><br>
 					&nbsp;<span style="color: #6B6D97; font-size: 14px;">05:28 / 16.05.2020</span>
@@ -93,7 +93,7 @@
 			</td>
 			
 			<td width="400px" align="right">
-				<img style="width: 386px; height: 190px;" src="sardoba.jpg">
+				<img style="width: 386px; height: 190px;" src="qism/sardoba.jpg">
 				<p align="left" style="font-size: 17px; font-weight: bolder">
 					&nbsp;&nbsp;Обмелевшая Сардоба: стихия или 
 					человеческий &nbsp;&nbsp;фактор? <br><br>
@@ -104,7 +104,7 @@
 
 		<tr valign="top" >
 			<td width="400px" align="left" >
-				<img  style="width: 386px; height: 190px;" src="prokuror.jpg">
+				<img  style="width: 386px; height: 190px;" src="qism/prokuror.jpg">
 				<p style="font-size: 17px; font-weight: bolder;">
 					Следствие проверяет четыре версии 
 					прорыва Сардобинской плотины
@@ -112,7 +112,7 @@
 			</td>
 			
 			<td width="400px" align="center"> 
-				<img style="width: 386px; height: 190px;" src="tez-yordam.jpg">
+				<img style="width: 386px; height: 190px;" src="qism/tez-yordam.jpg">
 				<p align="left" style="font-size: 17px; font-weight: bolder;">
 					&nbsp;Выявлено еще 7 случаев коронавируса <br><br>
 					&nbsp;<span style="color: #6B6D97; font-size: 14px;">05:28 / 16.05.2020</span>
@@ -120,7 +120,7 @@
 			</td>
 			
 			<td width="400px" align="right">
-				<img style="width: 386px; height: 190px;" src="stop-karantin.jpg">
+				<img style="width: 386px; height: 190px;" src="qism/stop-karantin.jpg">
 				<p align="left" style="font-size: 17px; font-weight: bolder;">
 					&nbsp;&nbsp;Итоги второго месяца карантина <br><br>
 					&nbsp;&nbsp;<span style="color: #6B6D97; font-size: 14px;">05:28 / 16.05.2020</span>
